# Physical-AI-Humanoid-Robotics-With-Chatbot

./: .gitignore  .npmignore  404.html  docusaurus.config.ts  index.html  sidebars.ts  sitemap.xml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
assets/css/: styles.732dc8a7.css  styles.feb248ec.css
assets/js/: 17896441.2a755fd6.js  18c41134.aba129a7.js  18c41134.ad63c51c.js  1df93b7f.6b2c27a5.js  1e4232ab.379a7a7e.js  1e4232ab.b798ea34.js  1f391b9e.6402b2f7.js  285.b39d2c44.js  29b6479d.2370e050.js  29b6479d.fdbe6f71.js  393be207.16b29308.js  533a09ca.2a6c0304.js  533a09ca.86843c0b.js  5c868d36.3f78a3a4.js  5c868d36.90609dd8.js  822bd8ab.30c5c056.js  822bd8ab.49aa7bbe.js  994ee1b8.8ce364b8.js  a09c2993.47723321.js  a09c2993.4debebf4.js  a503b8ef.819efb33.js  a503b8ef.f3bf8005.js  a559b803.3f31eda1.js  a559b803.fc0d16be.js  a7bd4aaa.d1c2899f.js  c052f5fa.3e3c6a50.js  c052f5fa.7ffdd659.js  dff1c289.09cd9958.js  dff1c289.514d8cf0.js  e44a2883.ade4eb13.js  e44a2883.d8d33087.js  f01f8357.bdeeaa8c.js  f01f8357.f889d87c.js  f55d3e7a.9d3ba05c.js  f55d3e7a.ba353445.js  f81ba7f8.ce7e732c.js  f81ba7f8.d1787eb8.js  main.5be1a8e5.js  main.f25c59c9.js  runtime~main.71141473.js  (+1 more)
docs/: 01-ros2.md  02-gazebo-unity.md  03-isaac.md  04-vla.md  05-capstone.md  06-references.md  index.html  introduction.md
docs/01-ros2/: index.html
docs/02-gazebo-unity/: index.html
docs/03-isaac/: index.html
docs/04-vla/: index.html
markdown-page/: index.html
rag_backend/: ingest.py  main.py  pyproject.toml  requirements.txt  test-agent.py
src/pages/: index.tsx
(+26 files in other folders)
